# intelligent-doc-extractor

./: .gitignore  README.md  docker-compose.yaml  vercel.json
.github/workflows/: deploy-api-hf.yml  main.yml  sync-backend-hfspace.yml
backend/: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: endpoints.py
backend/app/core/: exception.py
backend/app/services/: llm_service.py  ocr_service.py
backend/tests/: conftest.py  test_main.py
frontend/: .prettierignore  App.tsx  Dockerfile  README.md  eslint.config.js  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
frontend/src/: constants.ts  types.ts
frontend/src/components/: Extractor.tsx  FileUpload.tsx  Header.tsx  LandingPage.tsx  ResultsViewer.tsx  SchemaBuilder.tsx
